--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,43 +13,45 @@ on:
     branches:
       - main
 
-jobs:
-  build:
-    name: Build bookmarker-api
-    runs-on: macos-latest
+ jobs:
+    build:
+      name: Build bookmarker-api
+      runs-on: macos-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: ./mvnw verify
+      steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: ./mvnw verify
       
-   - name: Set up QEMU
-     uses: docker/setup-qemu-action@v1
+     - name: Set up QEMU
+       uses: docker/setup-qemu-action@v1
 
-   - name: Set up Docker Buildx
-     uses: docker/setup-buildx-action@v1
+     - name: Set up Docker Buildx
+       uses: docker/setup-buildx-action@v1
 
-   - name: Login to Docker registry
-     uses: docker/login-action@v1
-     with:
-       username: ${{ secrets.DOCKER_USERNAME }}
-       password: ${{ secrets.DOCKER_PASSWORD }}
+     - name: Login to Docker registry
+       uses: docker/login-action@v1
+       with:
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
 
-   - name: Build and push multi-architecture image
-     uses: docker/build-push-action@v5
-     with:
-       context: .
-       push: true
-       tags: |
-         basilk27/bookmarker-api:latest-amd64
-         basilk27/bookmarker-api:latest-arm64
-       platforms: linux/amd64,linux/arm64
+     - name: Build and push multi-architecture image
+       uses: docker/build-push-action@v5
+       with:
+         context: .
+         push: true
+         tags: |
+           basilk27/bookmarker-api:latest-amd64
+           basilk27/bookmarker-api:latest-arm64
+         platforms: linux/amd64,linux/arm64
 
       
 
