--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,14 +14,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: ./mvnw clean install -DskipTests
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v3
+#       with:
+#         java-version: '17'
+#         distribution: 'temurin'
+#         cache: maven
+#     - name: Build with Maven
+#       run: ./mvnw clean install -DskipTests
       
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
