--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,40 +14,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-#     - name: Set up JDK 17
-#       uses: actions/setup-java@v3
-#       with:
-#         java-version: '17'
-#         distribution: 'temurin'
-#         cache: maven
-#     - name: Build with Maven
-#       run: ./mvnw clean install -DskipTests
-      
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to Docker registry
-      uses: docker/login-action@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: ./mvnw verify
 
-    - name: Build and push multi-architecture image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: |
-          basilk27/bookmarker-api:latest-amd64
-          basilk27/bookmarker-api:latest-arm64
-        platforms: linux/amd64,linux/arm64
+    -if: ${{ github.ref == 'refs/heads/main' }}
+      name: Build and Publish Docker Image
+      run: |
+        ./mvnw clean package jib:dockerBuild -DskipTests
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/ bookmarker-api
 
-      
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    # - name: Update dependency graph
-    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-      
