--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
     - if: ${{ github.ref == 'refs/heads/main' }}
       name: Build and Publish Docker Image
       run: |
-        ./mvnw clean package jib:dockerBuild -DskipTests
+        ./mvnw clean package jib:dockerBuild -Dmaven.test.skip=true
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker push ${{ secrets.DOCKER_USERNAME }}/ bookmarker-api
 
