--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
                         </platforms>
                     </from>
                     <to>
-                        <image>docker.io/${dockerImageName}</image>
+                        <image>${dockerImageName}</image>
                         <tags>
                             <tag>latest</tag>
                             <tag>${project.version}</tag>
