--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build bookmarker-api
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -26,7 +26,7 @@ jobs:
     - if: ${{ github.ref == 'refs/heads/main' }}
       name: Build and Publish Docker Image
       run: |
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         ./mvnw clean package jib:dockerBuild -DskipTests
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
 
