--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,28 +5,52 @@ on:
     branches:
       - main
 
+
 jobs:
-  build:
-    name: Build bookmarker-api
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: ./mvnw verify
-
-    - if: ${{ github.ref == 'refs/heads/main' }}
-      name: Build and Publish Docker Image
-      run: |
-        ./mvnw clean package jib:build -DskipTests
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
+# jobs:
+#   build:
+#     name: Build bookmarker-api
+#     runs-on: ubuntu-latest
+#
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v3
+#
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v3
+#       with:
+#         java-version: '17'
+#         distribution: 'temurin'
+#         cache: maven
+#     - name: Build with Maven
+#       run: ./mvnw verify
+#
+#     - if: ${{ github.ref == 'refs/heads/main' }}
+#       name: Build and Publish Docker Image
+#       run: |
+#         ./mvnw clean package jib:build -DskipTests
+#         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+#         docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
 
