--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,9 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest
+          tags: |
+            basilk27/bookmarker-api:latest-amd64
+            basilk27/bookmarker-api:latest-arm64
 
 # jobs:
 #   build:
