--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,10 @@
                                 <architecture>arm64</architecture>
                                 <os>linux</os>
                             </platform>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
                         </platforms>
                     </from>
                     <to>
