--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,19 +16,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME}}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: |
-            http://docker.io/${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest-amd64
             http://docker.io/${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest-arm64
+          cache-from: type=gha
+          cache-to: type=gha, mode=max
 
 
 # jobs:
