--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,12 +22,17 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v5
+        env:
+          IMAGE_NAME: basilk27/bookmarker-api
+          IMAGE_TAG: latest
         with:
           context: .
           platforms: linux/arm64
           push: true
           tags: |
-            http://docker.io/${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest-arm64
+            http://docker.io/$IMAGE_NAME:IMAGE_TAG
+#           tags: |
+#             http://docker.io/${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest-arm64
           cache-from: type=gha
           cache-to: type=gha, mode=max
 
