--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
           context: .
           platforms: linux/arm64
           push: true
-          tags: http://docker.io/${{ IMAGE_NAME }}:${{ IMAGE_TAG }}
+          tags: http://docker.io/{{ $IMAGE_NAME }}:{{ $IMAGE_TAG }}
 #           tags: |
 #             http://docker.io/${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest-arm64
           cache-from: type=gha
